--- a/JavaScript/DOM/domapi/src/index.css
+++ b/JavaScript/DOM/domapi/src/index.css
@@ -1,4 +1,5 @@
 body {
+  background: #eee;
   margin: 0;
   padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -11,4 +12,15 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.messageContainer
+{
+  margin-bottom:12px;
+  background:#fff;
+  padding:12px;
+  border-radius: 20px;
+  width:66%;
+  border-right: 2px solid #ddd;
+  border-bottom: 2px solid #ddd
 }
