--- a/JavaScript/DOM/eventsexercise/src/index.css
+++ b/JavaScript/DOM/eventsexercise/src/index.css
@@ -25,7 +25,7 @@ code {
 
 
 nav a{
-  padding: 20px 40px;
+  padding: 20px 20px;
   text-decoration:none;
   font-weight:600;
 }
@@ -36,6 +36,10 @@ nav {
 
 nav a:hover {
   background:var(--nav-accent);
+}
+
+nav a:link{
+  color: black;
 }
 
 nav a:visited{
@@ -59,5 +63,5 @@ nav a:visited{
 
 .rootDiv {
   margin: auto;
-  width:66%;
+  width:80%;
 }
