--- a/JavaScript/DOM/eventsexercise/src/index.css
+++ b/JavaScript/DOM/eventsexercise/src/index.css
@@ -1,6 +1,8 @@
 body {
   /* margin: 0; */
   /* padding: 0; */
+  width:80%;
+  margin: auto;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
@@ -10,7 +12,7 @@ body {
 
 :root{
   --div-background:#eee;
-  --nav-accent: #ddd;
+  --nav-accent: #e0ecf4;
   --nav-selected: #b2d0e4;
 }
 
@@ -48,7 +50,7 @@ nav a:visited{
 
 .container {
   width: 80%;
-  margin: auto;
+  margin-left: 30px;
   background-color: var(--div-background);
   padding:20px ;
 }
@@ -62,6 +64,6 @@ nav a:visited{
 }
 
 .rootDiv {
-  margin: auto;
-  width:80%;
+  /* margin: auto;
+  width:80%; */
 }
