calculator: hover colours on important buttons

--- a/JavaScript/calculator/src/index.css
+++ b/JavaScript/calculator/src/index.css
@@ -99,3 +99,11 @@ p {
   background:dodgerblue;
 }
 
+.equalsBtn:hover {
+  background: #baebae;
+}
+
+.redHover:hover {
+  background: #f6a3a3;
+}
+
