--- a/JavaScript/calculator/src/index.css
+++ b/JavaScript/calculator/src/index.css
@@ -7,6 +7,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-image: linear-gradient(#bbb, #aaa);
+  background-attachment:fixed;
 }
 
 code {
@@ -53,7 +55,7 @@ code {
 p {
   font-size: 2.2em;
   text-align: right;
-  margin: 20px 0 0 0;
+  margin: 0px 0 0 0;
   padding-right: 24px;
   padding-top: 36px;
   min-height:60px;
@@ -86,17 +88,27 @@ p {
 }
 
 .seasickBtn {
-  background: cornflowerblue;
+  background: radial-gradient(rgb(153, 189, 255), cornflowerblue);
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   color: white;
-  font-size: 1.2em;
-  border: none;
+  font-size: 1.5em;
+  border: rgba(86, 118, 177, 0.3) 1px solid;
+  border-bottom: cornflowerblue 8px solid;
   padding:20px;
   margin-top: 60px;
   border-radius: 10px;
+  box-shadow: 0px 6px 12px #888;
+  outline:none;
 }
 
 .seasickBtn:hover {
   background:dodgerblue;
+}
+
+.seasickBtn:active {
+  border: rgba(86, 118, 177, 0.3) 1px solid;
+  transform: translateY(8px);
+  box-shadow: 2px 4px 20px #bbb;
 }
 
 .equalsBtn:hover {
@@ -105,5 +117,11 @@ p {
 
 .redHover:hover {
   background: #f6a3a3;
+}
+
+#root {
+  width:400px;
+  margin-top: 20px;
+  box-shadow: 2px 12px 20px #666;
 }
 
