--- a/JavaScript/calculator/src/index.css
+++ b/JavaScript/calculator/src/index.css
@@ -49,16 +49,68 @@ code {
 .displayDiv{
   width: 400px;
   background: #eee;
-  /* background:green; */
 }
 
-p {
+.container{
+  margin:auto;
+  width: 95%;
+  display: flex;
+}
+
+#help {
+  background:linear-gradient(#fafaed, #F5F5DC);
+  min-width:240px;
+  margin-left:100px;
+  padding:20px;
+  padding-left: 40px;
+  border-radius:60px;
+  height: 320px;
+  margin-top:20px;
+  box-shadow: 0px 6px 12px #888;
+}
+
+#help p {
+  text-align:justify;
+}
+
+#help button {
+  background: cornflowerblue;
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  color: white;
+  font-size: 1.2em;
+  border: rgba(86, 118, 177, 0.3) 1px solid;
+  border-bottom: rgb(80, 117, 185) 8px solid;
+  padding:6px 30px; 
+  border-radius: 10px;
+  outline:none;
+}
+
+#help h1 {
+  color:rgb(183, 218, 255);
+  font-size:2.4em;
+  text-shadow: 2px 2px 2px #999;
+}
+
+#help button:active {
+  border: rgba(86, 118, 177, 0.3) 1px solid;
+  transform: translateY(8px);
+}
+
+#help button:hover {
+  cursor:pointer;
+  background: radial-gradient(rgb(153, 189, 255), cornflowerblue);
+}
+
+
+#display {
   font-size: 2.2em;
   text-align: right;
   margin: 0px 0 0 0;
   padding-right: 24px;
   padding-top: 36px;
   min-height:60px;
+  max-width:400px;
+  background:rgb(250, 250, 250);
 }
 
 .strobe {
@@ -88,12 +140,12 @@ p {
 }
 
 .seasickBtn {
-  background: radial-gradient(rgb(153, 189, 255), cornflowerblue);
+  background:cornflowerblue;
   font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   color: white;
   font-size: 1.5em;
   border: rgba(86, 118, 177, 0.3) 1px solid;
-  border-bottom: cornflowerblue 8px solid;
+  border-bottom: rgb(80, 117, 185) 8px solid;
   padding:20px;
   margin-top: 60px;
   border-radius: 10px;
@@ -102,7 +154,7 @@ p {
 }
 
 .seasickBtn:hover {
-  background:dodgerblue;
+  background: radial-gradient(rgb(153, 189, 255), cornflowerblue);
 }
 
 .seasickBtn:active {
@@ -122,6 +174,7 @@ p {
 #root {
   width:400px;
   margin-top: 20px;
+  margin-left: 20px;
   box-shadow: 2px 12px 20px #666;
 }
 
