--- a/JavaScript/calculator/src/index.css
+++ b/JavaScript/calculator/src/index.css
@@ -93,7 +93,7 @@ code {
 }
 
 #help button:active {
-  border: rgba(86, 118, 177, 0.3) 1px solid;
+  border: rgba(86, 118, 177, 0.8) 1px solid;
   transform: translateY(4px);
 }
 
@@ -111,6 +111,9 @@ code {
   min-height:60px;
   max-width:400px;
   background:rgb(250, 250, 250);
+  border: 1px solid transparent;
+  overflow:hidden;
+  text-overflow:clip;
 }
 
 .equalsBtn:hover {
