--- a/JavaScript/HangmanAttempt/src/index.css
+++ b/JavaScript/HangmanAttempt/src/index.css
@@ -36,7 +36,6 @@ code {
 }
 
 .letterbutton {
-  
   border: none;
   padding: 10px;
   margin: 4px;
@@ -60,5 +59,16 @@ p {
 
 div {
   margin-top:40px;
+}
+
+label {
+  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-size: 1.4em;
+}
+
+h2 {
+  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-weight:100;
+  font-size: 2.4em;
 }
 
