--- a/HTML/resume/public/cv.css
+++ b/HTML/resume/public/cv.css
@@ -9,8 +9,15 @@ body {
     
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1 {
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+h2, h3, h4, h5, h6 {
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-variant-caps: all-small-caps;
+    font-size:1.4em;
+    margin-bottom:10px;
     /* font-weight:lighter; */
 }
 
@@ -20,6 +27,12 @@ h4 {
 
 h2 {
     margin-top:30px;
+}
+
+h3 {
+    background-color: #555;
+    padding: 8px;
+    color: white;
 }
 
 p, blockquote, li {
@@ -58,6 +71,10 @@ a:hover {
     width: 100%;
 }
 
+.icons {
+    font-size:1.1em;
+}
+
 .page-margin {
     margin-left: 40px;
 }
@@ -67,6 +84,10 @@ a:hover {
 }
 
 .print-friendly h2 {
+    font-size:1.2em;
+}
+
+.print-friendly h3 {
     font-size:1.2em;
 }
 
@@ -84,8 +105,8 @@ a:hover {
     width: 96px;    
 }
 
-.link-list{
-    margin-left:-20px;
+.larger {
+    font-size: 10em;
 }
 
 @media print {
@@ -120,7 +141,7 @@ a:hover {
 
 .kolom
 {
-    width:35%;
+    width:42%;
     display: inline-block;
     margin: auto;
     vertical-align: text-top;
